Used EntityFramework to perform CRUD operations & removed hard coding

--- a/ShopBridgeInventoryService/Service/appsettings.json
+++ b/ShopBridgeInventoryService/Service/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\SQLExpress;Initial Catalog=ShopBridge;Integrated Security=true;Encrypt=true;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
